--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <h2>レビューを投稿</h2>
 
     <form id="review-form">
-        <label for="book-title">本のタイトル</label>
+        <label for="book-title">本のタイトル</label><br>
         <input type="text" id="book-title" required><br>
         <label for="author">筆者</label><br>
         <input type="text" id ="author" required><br>
@@ -37,11 +37,18 @@
             <option value="文芸・純文学">文芸・純文学</option>
             <option value="児童・YA">児童・YA</option>
             <option value="実用・エッセイ">実用・エッセイ</option>
+            <option value="その他">その他</option>
         </select><br>
         <label for="review">レビュー</label><br>
         <textarea name="review" id="review" rows="4" cols="50" required></textarea><br>
         <label for="stars">評価（☆）</label>
-        <input type="number" id="stars" min="0" max="5"><br>
+        <div class="star-rating">
+            <input type="radio" name="stars" id="star5" value="5"><label for="star5">☆</label>
+            <input type="radio" name="stars" id="star5" value="4"><label for="star4">☆</label>
+            <input type="radio" name="stars" id="star5" value="3"><label for="star3">☆</label>
+            <input type="radio" name="stars" id="star5" value="2"><label for="star2">☆</label>
+            <input type="radio" name="stars" id="star5" value="1"><label for="star1">☆</label>
+        </div>
 
         <button type="submit">投稿</button>
     </form>
