--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
             <input type="radio" name="stars" id="star3" value="3"><label for="star3">☆</label>
             <input type="radio" name="stars" id="star2" value="2"><label for="star2">☆</label>
             <input type="radio" name="stars" id="star1" value="1"><label for="star1">☆</label>
-        </div>
+        </div><br>
 
         <button type="submit">投稿</button>
     </form>
