Update review star4

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device=width, initial-scale=1.0" />
     <title>私の本の紹介</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>おすすめの本</h1>
@@ -41,13 +42,13 @@
         </select><br>
         <label for="review">レビュー</label><br>
         <textarea name="review" id="review" rows="4" cols="50" required></textarea><br>
-        <label for="stars">評価（☆）</label>
+        <label for="stars">評価</label>
         <div class="star-rating">
-            <input type="radio" name="stars" id="star5" value="5"><label for="star5">☆</label>
-            <input type="radio" name="stars" id="star4" value="4"><label for="star4">☆</label>
-            <input type="radio" name="stars" id="star3" value="3"><label for="star3">☆</label>
-            <input type="radio" name="stars" id="star2" value="2"><label for="star2">☆</label>
-            <input type="radio" name="stars" id="star1" value="1"><label for="star1">☆</label>
+            <input type="radio" name="stars" id="star5" value="5"><label for="star5">★</label>
+            <input type="radio" name="stars" id="star4" value="4"><label for="star4">★</label>
+            <input type="radio" name="stars" id="star3" value="3"><label for="star3">★</label>
+            <input type="radio" name="stars" id="star2" value="2"><label for="star2">★</label>
+            <input type="radio" name="stars" id="star1" value="1"><label for="star1">★</label>
         </div><br>
 
         <button type="submit">投稿</button>
