--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device=width, initial-scale=1.0" />
-    <title>私の本の紹介</title>
+    <title>本のレビューサイト</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/400670a7bf.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>おすすめの本</h1>
-    <div class="book">
-        <h2>タイトル：野生の叫び</h2>
-        <p>作者：ジャック・ロンドン</p>
-        <p>ジャンル：動物、冒険</p>
-        <p>紹介：カルフォルニアの裕福な家庭で飼われていた大型犬のバックが、生活環境の変化とともに身内の野生を発露していく。</p>
-    </div>
+    <header>
+        <div class="headerlogo">
+            <a href="https://my-book-portfolio.onrender.com/">
+            <i class="fa-solid fa-book-open"></i><span> 本のレビューサイト</span>
+            </a>
+        </div>
 
-    <h2>レビューを投稿</h2>
+    </header>
+    
 
     <form id="review-form">
+        <h2>レビューを投稿</h2>
         <label for="book-title">本のタイトル</label><br>
         <input type="text" id="book-title" required><br>
         <label for="author">筆者</label><br>
